<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="20dp"
        android:text="@string/project_visibility"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/project_pri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/new_project_relative_bg"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/button_vis_pr_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_done_black_24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toRightOf="@+id/button_vis_pr_selected"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_private"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/project_private_description"
                android:textColor="@color/color_grey_text_808080"
                android:textSize="12sp" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/project_pub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/new_project_relative_bg"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/button_vis_pu_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_done_black_24dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/button_vis_pu_selected"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_public"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/project_public_description"
                android:textColor="@color/color_grey_text_808080"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/text_button_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/new_project_relative_bg"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/sure"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/text_button_sure"
            android:background="@drawable/new_project_relative_bg"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>