<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ckt.ckttodo.ui.NewPlanActivity">

        <EditText
            android:id="@+id/et_planTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|start"
            android:hint="@string/plan"
            android:maxLines="1"
            android:padding="5dp"
            android:textColorHint="#848484"
            android:textSize="16sp"/>


        <EditText
            android:id="@+id/et_planDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="start"
            android:hint="@string/planDescription"
            android:lineSpacingMultiplier="1.5"
            android:textColorHint="#848484"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="10"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/planCycle"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/tv_planStartTime"
                style="@style/text"
                />

            <TextView
                style="@style/text"
                android:text="@string/to"/>

            <TextView
                android:id="@+id/tv_planEndTime"
                style="@style/text"
                />
        </LinearLayout>
    </LinearLayout>
</layout>