<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_project"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f7f7f7"
    android:orientation="vertical"
    tools:context="com.ckt.ckttodo.ui.NewProjectActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorWhite">

        <EditText
            android:id="@+id/edit_new_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_project_name"
            android:minHeight="40dp"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:textSize="16sp" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/project_owner"
        android:textColor="@color/color_grey_text_808080"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorWhite"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_person_outline_grey600_24dp" />

        <TextView
            android:id="@+id/edit_new_pr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:minHeight="30dp"
            android:paddingBottom="15dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:text="@string/me"
            android:textColor="@color/color_grey_text_808080"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/project_visibility"
        android:textColor="@color/color_grey_text_808080"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linear_project_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorWhite"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_visibility_grey600_24dp" />

        <TextView
            android:id="@+id/text_project_visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:minHeight="30dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:text="@string/project_private"
            android:textColor="@color/color_grey_text_808080"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/color_ffffff">

        <EditText
            android:id="@+id/edit_new_project_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/project_description"
            android:minLines="3"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:textSize="16sp" />

    </FrameLayout>


</LinearLayout>
