<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="plan"
            type="com.ckt.ckttodo.database.Plan"/>

        <import type="com.ckt.ckttodo.util.TranserverUtil"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:orientation="vertical"
        tools:context="com.ckt.ckttodo.ui.PlanDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/et_planTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plan"
                android:text="@{plan.planName}"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/et_planDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/planDescription"
                android:maxLines="3"
                android:text="@{plan.planContent}"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/planCycle"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tv_detailStartTime"
                    style="@style/text"
                    android:layout_marginLeft="5dp"
                    android:text="@{TranserverUtil.monthDay(plan.startTime)}"
                    />

                <TextView
                    style="@style/text"
                    android:text="@string/to"/>

                <TextView
                    android:id="@+id/tv_detailEndTime"
                    style="@style/text"
                    android:text="@{TranserverUtil.monthDay(plan.endTime)}"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/background_grey"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/containTask"
                android:textSize="16sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_task"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</layout>
